--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,8 +17,8 @@
                         <div class="form">
                             <form class="login-form" method="POST" action="/login">
                                 <h2>Login</h2>
-                                <input type="text" name="username" placeholder="username" />
-                                <input type="password" name="password" placeholder="password" />
+                                <input type="text" name="username" placeholder="username" value="user1"/>
+                                <input type="password" name="password" placeholder="password" value="password"/>
                                 <button>login</button>
                                 <a href="/auth/facebook" >facebook</a>
                                 <p class="message">Not registered? <a href="#" data-toggle="modal" data-target="#exampleModal" data-toggle="modal" data-target="#exampleModal">Create an account</a></p>
