--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -1,23 +1,46 @@
 <div class="content container-fluid bootstrap snippets" style="margin-top:5rem">
     <div class="row row-broken">
-    <div class="col-12 mb-2">
-        <div id="rmBtn" class="my-1">
-            <button class="joinRm btn btn-primary">rma</button>
-            <button class="joinRm btn btn-primary">rmb</button>
+        <div class="col-12 mb-2">
+            <div id="rmBtn" class="my-1">
+                <button class="joinRm btn btn-primary">rma</button>
+                <button class="joinRm btn btn-primary">rmb</button>
+            </div>
+            <button class="btn btn-danger" id="leave-room">CHECKOUT !!</button>
         </div>
-            <button class="btn btn-danger" id="leave-room" >CHECKOUT !!</button>
-    </div>
-    <div class="col-sm-12 col-xs-12 chat" style="overflow: hidden; outline: none;" tabindex="5001">
-        <div class="col-inside-lg decor-default">
-        <div class="chat-body hide">
-            
-            <div id="chat-messages"></div>
-            <form class="answer-add " id="msgBox">
-            <input placeholder="Escriba un mensaje" id="m">
-            <button id="send-message" class="answer-btn answer-btn-2"></button>
-            </form>
+        <div class="col-sm-12 col-xs-12 chat" style="overflow: hidden; outline: none;" tabindex="5001">
+            <div class="col-inside-lg decor-default">
+                <div class="chat-body hide">
+
+                    <div id="chat-messages"></div>
+                    <form class="answer-add " id="msgBox">
+                        <input placeholder="Escriba un mensaje" id="m">
+                        <button id="send-message" class="answer-btn answer-btn-2"></button>
+                    </form>
+                </div>
+            </div>
         </div>
-        </div>
-    </div>
     </div>
 </div>
+
+<!-- dev -->
+<form id="create" method="POST" action="/room">
+    <input id="customName" type="text" name="customName">customName
+    <br>
+    <input id="privateRoom" type="checkbox" name="private">Private
+    <br>
+    <input id="password" type="text" name="password" placeholder="password">Password
+    <br>
+    <input id="createRoom" type="submit">CREATE ROOM</input>
+</form>
+
+<form id="join" method="post" action="/room">
+    <input type="submit" class="joinRoom" data-roomID="someIDA" value="rma">
+    <input type="submit" class="joinRoom" data-roomID="someIDB" value="rmb">
+</form>
+
+<form id="logout" method="GET" action="/logout">
+    <button type="submit">LOGOUT</button>
+</form>
+
+<!-- mimic effect of leaving from room page -->
+<button id="leave">leave room</button>
