--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b4d0e7 !important;
+    background-image: url("/images/wall.jpg");
 }
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
