--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,6 @@
         crossorigin="anonymous">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/drawing.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,16 +34,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
+                    {{#if isLoggedIn}}
                     <li class="nav-item">
-                        {{!--
-                        <a class="nav-link disabled" href="#login">SignIn/login</a> --}}
+                        <a class="nav-link" href="/logout">logout</a>
                     </li>
+                    {{/if}}
                 </ul>
             </div>
         </nav>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
+    
 
     {{{body}}}
 
@@ -52,7 +55,7 @@
 
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
+    
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
         crossorigin="anonymous"></script>
@@ -63,18 +66,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
         crossorigin="anonymous"></script>
     {{!-- room page only --}}
-    {{!-- <script src="canvas-common.js"></script> --}}
+    {{!-- <script src="canvas-common.js"></script> --}}    
 
-    <script>
-        $(function () {
-
-            $('.chat').niceScroll();
-
-            $('.chat').scrollTop($('.chat').get(0).scrollHeight, -1);
-
-        });
-
-    </script>
+    {{#if isLoggedIn}}
+        <script src="js/main.js"></script>
+    {{/if}}
 </body>
 
 </html>
