--- a/public/drawing.css
+++ b/public/drawing.css
@@ -1,54 +1,97 @@
-.draw{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
 #color-picker {
-    border: 3px #0F98CA solid;
-    height: 488px;
-    width: 200px;
-    background-color: #E2E2E3;
+    height: 70px;
+    width: 906px;
+    /* background-color: #CC6600; */
+    display: flex;
+    flex-direction: row;
+    font-size: 30px;
 }
 
-.color {
-    font-size: 35px;
+.upper {
+    /* border: 5px black solid; */
+    border-radius: 8px;
+    width: 906px;
+    box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.7);
 }
 
 .canvas {
-    border: 3px #0F98CA solid;
-    background-color: white;
+    border-right: 3px white solid;
+    /* background-color: #33655A; */
     opacity: 1;
-    height: 488px;
-    width: 706px;
     position: absolute;
+    cursor: url(images/chalk.png), auto;
+    z-index: 2;
+    border-radius: 8px 0px 0px 8px;
 }
 
 #canvas-real {
-    border: 3px #0F98CA solid;
+    border-right: 3px white solid;
+    /* background-color: #33655A; */
+    background-image: url("./images/chalkboard.jpg");
+    z-index: 2;
 }
 
-#canvas-draft {
-    border: 3px rgb(233, 25, 25) solid;
+#chalkboard {
+    border-right: 3px white solid;
     background-color: transparent;
 }
 
-canvas:hover {
-    cursor: crosshair;
+#canvas-container {
+    display: relative;
 }
 
-
 #ranking {
-    border: 3px #0F98CA solid;
+    border-left: 3px white solid;
+    border-bottom: 3px white solid;
+    /* background-color: #33655A; */
+    background-image: url("./images/chalkboard.jpg");
     width: 200px;
-    height: 241px;
+    height: 150px;
+    margin-left: 706px;
+    display: absolute;
+    border-radius: 0px 8px 0px 0px;
 }
 
 #chatroom {
-    border: 3px #0F98CA solid;
+    border-left: 3px white solid;
+    /* border-top: 3px white solid; */
+    /* background-color: #33655A; */
+    background-image: url("./images/chalkboard.jpg");
     width: 200px;
-    height: 241px;
+    height: 338px;
+    margin-left: 706px;
+    display: absolute;
+    border-radius: 0px 0px 8px 0px ;
+}
+
+
+.fa-minus {
+    transform: rotate(45deg);
+    font-size: 1.5em;
+    padding: 0px 8px 0px 8px;
+    margin: 0px;
+    border: 0px;
+}
+
+.room {
+    width: 1010px;
+    height: 590px;
+    /* background-position: 100px 100px; */
+    background-image: url("./images/wood.jpg");
+    background-size: 1010px 590px;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px 10px rgba(0, 0, 0, 0.7);
 }
 
 
 
+
+.draw {
+    margin: 0px;
+    width: 1500px;
+    height: 800px;
+    background-image: url("./images/wall.jpg");
+    background-repeat: no-repeat;
+    background-size: 1500px 783px;
+}
