--- a/public/loginpage.css
+++ b/public/loginpage.css
@@ -1,61 +1,52 @@
-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 50vw;
 }
 
-h1 {
-    color: #23395B;
-    font-size: 100px;
-    font-family: Love Ya Like A Sister;
-    font-weight: bold;
+.all {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-body{
-    background-color: #59C9A5;
+body {
+  padding: 0px;
+  border: 0px;
+  margin: 0px;
+  /* background-image: url("./images/chalkboard-loginpage.jpg"); */
+  background-image: url("./images/chalkboard2.png");
+  background-size: 100vw 50vw;
+  background-repeat: no-repeat;
 }
 
-.button {
-    display: inline-block;
-    border-radius: 50px;
-    background-color: #23395B;
-    border: none;
-    color: #FFFD98;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    width: 300px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-  }
-  
-  .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-    font-family: Love Ya Like A Sister;
-    font-weight: bold;
-  }
-  
-  .button span:after {
-    content: url(images/IMG-20180426-WA0003.png);
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  
-  .button:hover span {
-    padding-right: 25px;
-  }
-  
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
+
+#name {
+  width: 35vw;
+  height: 10vw;
+}
+
+#login-with {
+  width: 15vw;
+  height: 10vw;
+}
 
 
+
+/* #guest {
+  align-self: flex-end;
+} */
+
+.method>input {
+  width: 8vw;
+  height: 8vw;
+  transition: transform .2s;
+  margin-top: 6px;
+}
+
+input:hover {
+  transform: scale(1.3);
+}
