--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,14 +2,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="intro" style="float: right;margin-top: 50%;">
+                    {{!-- <div class="intro" style="float: right;margin-top: 50%;">
                         <article style="text-align: right">
                             <h1>Draw To Play</h1>
                             <i>pictionary</i>
                             <h2>Fun Explore</h2>
                             <h5>Challenge your friends</h5>
                         </article>
-                    </div>
+                    </div> --}}
                 </div>
 
                 <div class="col-md-6">
