--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -21,7 +21,7 @@
                 <div id="chatroom">
                     <p>chatroom</p>
                     <form action="" id="msgBox" class="">
-                        <input id="m" autocomplete="off" placeholder="guess"/>
+                        <input id="m" autocomplete="off" placeholder="guess" />
                         <button>Send</button>
                     </form>
                 </div>
@@ -63,6 +63,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div>Time left =
+    <span id="timer"></span>
 </div>
 
 <script src="js/room.js"></script>
