--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 body {
     background-image: url("/images/wall.jpg");
+    font-family: 'Indie Flower', cursive;
+    font-weight: 600;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 .login-page {
     width: 360px;
     padding: 8% 0 0;
@@ -66,4 +69,8 @@ body {
 
 .form .register-form {
     display: none;
+}
+
+.nav-link {
+    color: #ffff !important;
 }
