--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,6 +14,14 @@
 
                 <div class="col-md-6">
                     <div class="login-page">
+                        {{#if err}}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>{{err}}</strong> Username or password doesnt match
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                {{/if}}
                         <div class="form">
                             <form class="login-form" method="POST" action="/login">
                                 <h2>Login</h2>
